tests/ui/feature-gates/feature-gate-split-pattern.stderr
error[E0658]: use of unstable library feature 'split_pattern'
  --> $DIR/feature-gate-split-pattern.rs:4:19
   |
LL |     let mut c = a.split_pattern(b);
   |                   ^^^^^^^^^^^^^
   |
   = note: see issue #49036 <https://github.com/rust-lang/rust/issues/49036> for more information
   = help: add `#![feature(split_pattern)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
